--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,3 +121,68 @@ table {
   display:flex;
   justify-content:space-between;
 }
+
+#profile{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+#profileimg{
+  width:150px;
+  height:150px;
+  border-radius:50%;
+}
+
+#drawer{
+  margin:10px;
+}
+
+#userList{
+  display:flex;
+  cursor:pointer;
+  margin-top:2rem;
+}
+
+#userList > img{
+  width:50px;
+  height:50px;
+  border-radius:50%;
+  margin-right:2rem;
+}
+
+#chat{
+  margin:1rem;
+  border:1px solid;
+  border-radius:15px;
+}
+
+#chatData{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  width:30vw;
+  margin:1rem 0;
+  padding:0 1rem;
+  /* height:90vh; */
+}
+
+#chatList{
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  height:80vh;
+  overflow-y:hidden;
+}
+
+.chatBox{
+  margin:0.5rem 0;
+  min-height:2rem;
+  cursor:pointer;
+  background:rgba(3,3,3,0.3);
+  border-radius:15px;
+}
+
+.chatBox > p{
+  margin:0 1rem;
+}
