--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,20 +135,23 @@ table {
 }
 
 #drawer{
-  margin:10px;
+  margin:1rem;
 }
 
 #userList{
   display:flex;
   cursor:pointer;
-  margin-top:2rem;
+  margin-top:1rem;
+  padding:0.4rem;
+  border-radius:15px;
+  background:rgba(3,3,3,0.3);
 }
 
-#userList > img{
+#userList > img, .chatBox > img{
   width:50px;
   height:50px;
   border-radius:50%;
-  margin-right:2rem;
+  margin-right:1rem;
 }
 
 #chat{
@@ -171,18 +174,25 @@ table {
   display:flex;
   flex-direction:column;
   width:100%;
-  height:80vh;
+  height:72vh;
   overflow-y:hidden;
 }
 
 .chatBox{
-  margin:0.5rem 0;
-  min-height:2rem;
+  display:flex;
+  padding:0.5rem;
+  margin:0.5rem 0.2rem;
   cursor:pointer;
-  background:rgba(3,3,3,0.3);
-  border-radius:15px;
+  /* background:rgba(3,3,3,0.3);
+  border-radius:15px; */
+  border-top:1px solid;
 }
 
-.chatBox > p{
-  margin:0 1rem;
+#drawer_search{
+  display:flex;
+  align-items:center;
+}
+
+#drawer_search > button{
+  margin-left:1rem;
 }
