--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,11 +111,12 @@ table {
   text-decoration:none;
 }
 
-
-#chats{
-  display:flex;
-  justify-content:space-between;
+#chatPage{
+  /* background:#333; */
+  height:100vh;
 }
+
+
 
 .header{
   display:flex;
@@ -154,11 +155,18 @@ table {
   margin-right:1rem;
 }
 
-#chat{
+#chats{
+  display:flex;
+  /* justify-content:center; */
+  /* height:100%; */
+}
+
+/* #chat{
   margin:1rem;
   border:1px solid;
   border-radius:15px;
-}
+  height:100%
+} */
 
 #chatData{
   display:flex;
@@ -167,7 +175,7 @@ table {
   width:30vw;
   margin:1rem 0;
   padding:0 1rem;
-  /* height:90vh; */
+  /* height:100%; */
 }
 
 #chatList{
@@ -185,7 +193,7 @@ table {
   cursor:pointer;
   /* background:rgba(3,3,3,0.3);
   border-radius:15px; */
-  border-top:1px solid;
+  border-bottom:1px solid;
 }
 
 #drawer_search{
@@ -195,4 +203,68 @@ table {
 
 #drawer_search > button{
   margin-left:1rem;
+}
+
+#badge{
+  display:flex;
+  flex-wrap:wrap;
+  width:100%;
+}
+
+.userBadge{
+  display:flex;
+  align-items:center;
+  padding:0.7rem;
+  border-radius:15px;
+  margin:1rem;
+  background:purple;
+  color:#fff;
+  cursor:pointer; 
+  max-width:7rem;
+}
+
+#chatBox{
+  display:flex;
+  flex:1;
+}
+
+#chatBoxInside{
+  display:flex;
+  flex:1;
+  justify-content:center;
+  align-items:center;
+  height:100%;
+}
+
+#activeChatBox{
+  flex:1;
+}
+
+#chatBoxHeader{
+  display:flex;
+  justify-content:space-between;
+  padding:0 1rem;
+}
+
+#profileDetails{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:1rem;
+}
+
+#inputSection{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+#messageSection{
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-end;
+  background:#E8E8E8;
+  width:100%;
+  height:95%;
+  overflow-y:hidden;
 }
