--- a/client/src/App.css
+++ b/client/src/App.css
@@ -158,7 +158,7 @@ table {
 #chats{
   display:flex;
   /* justify-content:center; */
-  /* height:100%; */
+  /* height:90vh; */
 }
 
 /* #chat{
@@ -224,7 +224,7 @@ table {
 }
 
 #chatBox{
-  display:flex;
+  /* display:flex; */
   flex:1;
 }
 
@@ -236,9 +236,9 @@ table {
   height:100%;
 }
 
-#activeChatBox{
+/* #activeChatBox{
   flex:1;
-}
+} */
 
 #chatBoxHeader{
   display:flex;
@@ -265,6 +265,14 @@ table {
   justify-content:flex-end;
   background:#E8E8E8;
   width:100%;
-  height:95%;
+  height:88%;
   overflow-y:hidden;
+}
+
+.messages{
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
+  overflow-y:auto;
+  margin:0 1rem;
 }
