--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,15 +113,11 @@ table {
 
 #chatPage{
   /* background:#333; */
-  height:100vh;
+  /* height:100vh; */
 }
 
 
 
-.header{
-  display:flex;
-  justify-content:space-between;
-}
 
 #profile{
   display:flex;
@@ -155,34 +151,41 @@ table {
   margin-right:1rem;
 }
 
+
+.header{
+  /* position:fixed; */
+  display:flex;
+  justify-content:space-between;
+  height:50px;
+}
+
 #chats{
   display:flex;
   /* justify-content:center; */
-  /* height:90vh; */
+  max-height:calc(100vh - 50px);
 }
 
-/* #chat{
-  margin:1rem;
+#chat{
+  /* margin:1rem;
   border:1px solid;
-  border-radius:15px;
-  height:100%
-} */
+  border-radius:15px; */
+  height:calc(100vh - 50px);
+}
 
 #chatData{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  width:30vw;
-  margin:1rem 0;
+  width:400px;
   padding:0 1rem;
-  /* height:100%; */
+  height:50px;
 }
 
 #chatList{
   display:flex;
   flex-direction:column;
   width:100%;
-  height:72vh;
+  height:calc(100vh - 100px);
   overflow-y:hidden;
 }
 
@@ -224,7 +227,7 @@ table {
 }
 
 #chatBox{
-  /* display:flex; */
+  display:flex;
   flex:1;
 }
 
@@ -233,7 +236,7 @@ table {
   flex:1;
   justify-content:center;
   align-items:center;
-  height:100%;
+  /* height:100%; */
 }
 
 /* #activeChatBox{
@@ -251,12 +254,15 @@ table {
   justify-content:center;
   align-items:center;
   gap:1rem;
+  margin:0.5rem 0;
 }
 
 #inputSection{
   display:flex;
-  justify-content:center;
+  background:#E8E8E8;
   align-items:center;
+  padding: 0.5rem 1rem;
+  gap:1rem;
 }
 
 #messageSection{
@@ -265,14 +271,21 @@ table {
   justify-content:flex-end;
   background:#E8E8E8;
   width:100%;
-  height:88%;
+  height:calc(100vh - 100px);
   overflow-y:hidden;
 }
 
 .messages{
   display:flex;
   flex-direction:column;
-  overflow:hidden;
-  overflow-y:auto;
+  overflow-y:scroll;
   margin:0 1rem;
+}
+
+.messages::-webkit-scrollbar {
+  display:none;
+}
+
+.styles_scrollable-div__prSCv::-webkit-scrollbar{
+  display:none;
 }
