--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+body{
+  min-width:700px;
+}
+
 #back {
   background-size: cover;
   background-position: center;
@@ -29,7 +33,7 @@
   margin: 4rem;
   /* background: rgb(0, 0, 0, 0.5); */
   background:#333;
-  width: 70vw;
+  width: 42rem;
   border-radius: 2%;
   /* opacity:0.9; */
 }
@@ -40,8 +44,10 @@
 }
 
 .login-data {
-  margin: 4rem;
+  padding: 4rem;
 }
+
+
 
 /* .login form {
   display:flex;
@@ -111,14 +117,6 @@ table {
   text-decoration:none;
 }
 
-#chatPage{
-  /* background:#333; */
-  /* height:100vh; */
-}
-
-
-
-
 #profile{
   display:flex;
   flex-direction:column;
@@ -176,7 +174,9 @@ table {
   display:flex;
   justify-content:space-between;
   align-items:center;
-  width:400px;
+  max-width:25rem;
+  min-width:22rem;
+  width:35vw;
   padding:0 1rem;
   height:50px;
 }
@@ -251,7 +251,7 @@ table {
 
 #profileDetails{
   display:flex;
-  justify-content:center;
+  justify-content:left;
   align-items:center;
   gap:1rem;
   margin:0.5rem 0;
@@ -288,4 +288,14 @@ table {
 
 .styles_scrollable-div__prSCv::-webkit-scrollbar{
   display:none;
+}
+@media (max-width: 810px) {
+  .login-data {
+    display: none;
+  }
+}
+@media (max-width:930px){
+  .login-data{
+    padding:4rem 0;
+  }
 }
