--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,6 +115,7 @@ table {
 
 .anchor{
   text-decoration:none;
+  color:#0E8388;
 }
 
 #profile{
@@ -155,6 +156,8 @@ table {
   display:flex;
   justify-content:space-between;
   height:50px;
+  background-color:#12161c;
+  color:#fff;
 }
 
 #chats{
@@ -179,6 +182,9 @@ table {
   width:35vw;
   padding:0 1rem;
   height:50px;
+  background-color:#1e2027;
+  color:#fff;
+  border-bottom:1px solid grey;
 }
 
 #chatList{
@@ -187,16 +193,18 @@ table {
   width:100%;
   height:calc(100vh - 100px);
   overflow-y:hidden;
+  background-color:#1e2027;
+  color:#fff;
 }
 
 .chatBox{
   display:flex;
   padding:0.5rem;
-  margin:0.5rem 0.2rem;
+  /* margin:0.5rem 0.2rem; */
   cursor:pointer;
   /* background:rgba(3,3,3,0.3);
   border-radius:15px; */
-  border-bottom:1px solid;
+  border-bottom:1px solid grey;
 }
 
 #drawer_search{
@@ -236,6 +244,8 @@ table {
   flex:1;
   justify-content:center;
   align-items:center;
+  background-color:#16181d;
+  color:#FFF;
   /* height:100%; */
 }
 
@@ -247,6 +257,8 @@ table {
   display:flex;
   justify-content:space-between;
   padding:0 1rem;
+  background-color:#1a1b1f;
+  color:#FFF;
 }
 
 #profileDetails{
@@ -259,10 +271,15 @@ table {
 
 #inputSection{
   display:flex;
-  background:#E8E8E8;
   align-items:center;
   padding: 0.5rem 1rem;
   gap:1rem;
+  background-color:#1a1b1f;
+  color:#FFF;
+}
+
+#messageInput::placeholder{
+  color:#fff;
 }
 
 #messageSection{
@@ -289,6 +306,16 @@ table {
 .styles_scrollable-div__prSCv::-webkit-scrollbar{
   display:none;
 }
+
+@media (max-width: 750px) {
+  #names {
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+
 @media (max-width: 810px) {
   .login-data {
     display: none;
