--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,16 +4,35 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/* 
 body{
   min-width:700px;
-}
+} */
+
+  /* Scrollbar Styles */
+  html {
+    scrollbar-width: thin;
+    max-height:100vh;
+    /* scrollbar-color: darkSlate navy; */
+  }
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  /* ::-webkit-scrollbar-track {
+    background: navy;
+  } */
+  ::-webkit-scrollbar-thumb {
+    background-color: dark-slate;
+    border: 1px solid grey;
+    /* border: 3px solid navy; */
+    border-radius: 10px;
+  }
 
 #back {
   background-size: cover;
   background-position: center;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   color: #fff;
 }
 
@@ -21,8 +40,8 @@ body{
   display: flex;
   justify-content: center;
   text-align: left;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   backdrop-filter: blur(40px);
 }
 
@@ -30,7 +49,8 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4rem;
+  margin: 3rem;
+  padding: 0 2rem;
   /* background: rgb(0, 0, 0, 0.5); */
   background:#333;
   width: 42rem;
@@ -41,6 +61,7 @@ body{
 .login table{
   width:32rem;
   height:27rem;
+  border-spacing: 1rem;
 }
 
 .login-data {
@@ -56,23 +77,22 @@ body{
   margin:12rem;
 } */
 
-table {
-  border-spacing: 0.8rem;
-}
-
 .signup {
   display: flex;
   justify-content: center;
   align-items: center;
+  width:100vw;
+  height:100vh;
 }
 
 .signup table {
   background: #333;
   background: rgb(0, 0, 0, 0.3);
   border-radius: 10px;
-  width:95vw;
-  height:90vh;
+  width:95%;
+  height:95%;
   padding-left:1rem;
+  /* border-spacing: 0.8rem; */
 }
 
 #File {
@@ -93,8 +113,16 @@ table {
   height: 130px;
   border: 2px solid rgba(255, 255, 255, 0.2);
   margin:1rem;
-  /* position: absolute; */
-  /* top: 72px; */
+}
+
+.circle img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 
 .profile-pic {
