--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,14 @@ body{
   min-width:700px;
 } */
 
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
   /* Scrollbar Styles */
   html {
     scrollbar-width: thin;
@@ -53,15 +61,14 @@ body{
   padding: 0 2rem;
   /* background: rgb(0, 0, 0, 0.5); */
   background:#333;
-  width: 42rem;
   border-radius: 2%;
   /* opacity:0.9; */
 }
 
 .login table{
-  width:32rem;
-  height:27rem;
-  border-spacing: 1rem;
+  width:30vw;
+  height:40vh;
+  /* border-spacing: 1rem; */
 }
 
 .login-data {
@@ -168,7 +175,7 @@ body{
   margin-top:1rem;
   padding:0.4rem;
   border-radius:15px;
-  background:rgba(3,3,3,0.3);
+  background:rgba(3,3,3,0.11);
 }
 
 #userList > img, .chatBox > img{
@@ -205,9 +212,7 @@ body{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  max-width:25rem;
-  min-width:22rem;
-  width:35vw;
+  width:25rem;
   padding:0 1rem;
   height:50px;
   background-color:#1e2027;
@@ -218,7 +223,7 @@ body{
 #chatList{
   display:flex;
   flex-direction:column;
-  width:100%;
+  width:25rem;
   height:calc(100vh - 100px);
   overflow-y:hidden;
   background-color:#1e2027;
